# agrtls

./: .gitignore  GEMINI.md  README.md  SYSTEM.md  test.py
Makerfabs-ESP32-UWB/example/anchor/anchor/: anchor.ino
Makerfabs-ESP32-UWB/example/ota/: edge_server.py
Makerfabs-ESP32-UWB/example/ota/blinking_test/: blinking_test.ino
Makerfabs-ESP32-UWB/example/ota/node_firmware/: ota_protocol.h
Makerfabs-ESP32-UWB/example/roleless/tag/: tag_node.ino
Makerfabs-ESP32-UWB/example/roleless/test/: node_painlesstest.ino
Makerfabs-ESP32-UWB/example/tag/uwb_tag/: uwb_tag.ino
device_harvest/device/: CLAUDE.md  README.md
device_harvest/device/catkin_ws/: .gitignore
device_harvest/device/catkin_ws/src/harvest_recorder/: CMakeLists.txt  DESIGN.md  package.xml
device_harvest/device/catkin_ws/src/harvest_recorder/config/: params.yaml
device_harvest/device/catkin_ws/src/harvest_recorder/launch/: bringup.launch  recorder.launch
device_harvest/device/catkin_ws/src/harvest_recorder/msg/: HarvestReading.msg
device_harvest/device/catkin_ws/src/harvest_recorder/src/: recorder_node.cpp  sim_harvest.cpp
device_harvest/device/catkin_ws/src/scale_reader/: CMakeLists.txt  DESIGN.md  package.xml
device_harvest/device/catkin_ws/src/scale_reader/config/: params.yaml
device_harvest/device/catkin_ws/src/scale_reader/include/scale_reader/: serial_port.h
device_harvest/device/catkin_ws/src/scale_reader/launch/: scale_reader.launch
device_harvest/device/catkin_ws/src/scale_reader/msg/: WeightReading.msg
device_harvest/device/catkin_ws/src/scale_reader/src/: scale_reader_node.cpp
device_harvest/device/catkin_ws/src/uwb_positioning/: CMakeLists.txt  DESIGN.md  package.xml
device_harvest/device/catkin_ws/src/uwb_positioning/config/: params.yaml
device_harvest/device/catkin_ws/src/uwb_positioning/config/anchors/: default.yaml
device_harvest/device/catkin_ws/src/uwb_positioning/include/uwb_positioning/: anchor_map.h  frame_parser.h  position_filter.h  serial_port.h  trilateration.h  uwb_ekf.h
device_harvest/device/catkin_ws/src/uwb_positioning/launch/: uwb_positioning.launch
device_harvest/device/catkin_ws/src/uwb_positioning/msg/: UwbPosition.msg
device_harvest/device/catkin_ws/src/uwb_positioning/src/: uwb_node.cpp
device_harvest/device/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
device_harvest/positioning/: README.md  anchor_track.py  config.py  environment.yml  filter_tuner.py  kalman.py  main.py  multilateration.py  network.py  visualizer.py  visualizer_2d.py  visualizer_3d.py  visualizer_base.py
device_harvest/ranging/: CLAUDE.md  CODESTYLE.md  README.md  platformio.ini
device_harvest/ranging/anchor/: anchor.ino
device_harvest/ranging/calibration/: README.md
device_harvest/ranging/docs/: ARCHITECTURE_distributed_tdma.md  ARCHITECTURE_mesh_tdma.md  ARCHITECTURE_synchronous_tdma.md  ARCHITECTURE_window_tdma.md  DESIGN_FLOW_distributed_tdma.md  DESIGN_FLOW_mesh_tdma.md  DESIGN_P3_core_mgm.md  DESIGN_P3_modules.md  DESIGN_P3_scope1.md  DESIGN_distributed_tdma_core.md  DESIGN_distributed_tdma_mgm.md  DESIGN_distributed_tdma_modules.md  DESIGN_dstwr_multianchor.md  DESIGN_synchronous_tdma_probe_recovery.md  GLOSSARY.md  README.md  SYSTEM_OVERVIEW.md  VARIANTS.md
device_harvest/ranging/monitoring/: environment.yml  monitoring.py
device_harvest/ranging/scripts/: upload_anchor_initiator.bash  upload_tag_anchor_org.bash  upload_tag_responder.bash
device_harvest/ranging/serial_monitoring/: monitoring.py
device_harvest/ranging/tools/: README.md  fake_sender.py  realtime_plot.py  requirements.txt
device_harvest/weight/: cas_serial.py
device_installation/kalibr/: Dockerfile  build.sh  imu-kalibr.yaml  results-cam-kalibr.txt
device_installation/vinsfusion/noetic/: build.sh
esp32/anchor/: anchor.ino
esp32/tag/uwb_tag/: uwb_tag.ino
kalibr/: aprilgrid.yaml  camchain-imucam-kalibr.yaml  camchain-kalibr.yaml  imu.yaml  results-imucam-kalibr.txt  run.sh
libraries/ros_lib/derived_object_msgs/: CipvTrack.h  Lane.h  LaneModels.h  Object.h  ObjectArray.h  ObjectWithCovariance.h  ObjectWithCovarianceArray.h  SolidPrimitiveWithCovariance.h
libraries/ros_lib/mobileye_560_660_msgs/: AftermarketLane.h  Ahbc.h  AhbcGradual.h  AwsDisplay.h  FixedFoe.h  Lane.h  LkaLane.h  LkaNumOfNextLaneMarkersReported.h  LkaReferencePoints.h  ObstacleData.h  ObstacleStatus.h  Tsr.h  TsrVisionOnly.h
libraries/ros_lib/novatel_gps_msgs/: ClockSteering.h  Gpgga.h  Gphdt.h  Gprmc.h  Inscov.h  Inspva.h  Inspvax.h  NovatelCorrectedImuData.h  NovatelMessageHeader.h  NovatelPosition.h  NovatelUtmPosition.h  NovatelVelocity.h  NovatelXYZ.h  RangeInformation.h  Time.h  TrackstatChannel.h
libraries/ros_lib/novatel_msgs/: Ack.h  BESTPOS.h  CORRIMUDATA.h  CommonFooter.h  CommonHeader.h  INSCOV.h  INSPVAX.h
orb3/humble/: Dockerfile  build.sh  run.sh
orb3/humble_docker/: Dockerfile
orb3/jazzy/: Dockerfile  build.sh  run.sh
vinsfusion/noetic/: Dockerfile  run.sh  vins_setting.json
(+56 files in other folders)
