<?xml version="1.0"?>
<package format="2">
  <name>harvest_recorder</name>
  <version>0.1.0</version>
  <description>
    Time-aligns UWB position and scale weight streams, records to CSV,
    and republishes combined HarvestReading messages.
  </description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>uwb_positioning</build_depend>
  <build_depend>scale_reader</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>uwb_positioning</build_export_depend>
  <build_export_depend>scale_reader</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>uwb_positioning</exec_depend>
  <exec_depend>scale_reader</exec_depend>
</package>
